--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "express-openid-connect": "^2.17.1",
+    "express-rate-limit": "^7.2.0",
+    "helmet": "^7.1.0",
     "joi": "^17.12.3",
     "mongoose": "^8.3.0",
-    "nodemon": "^3.1.0"
+    "morgan": "^1.10.0",
+    "morgan-json": "^1.1.0",
+    "nodemon": "^3.1.0",
+    "winston": "^3.13.0"
   }
 }
